--- a/style.css
+++ b/style.css
@@ -97,13 +97,13 @@ header .logo
 {
   display: inline-block;
   font-size: 1em;
-  background: #fff;
+  background: rgb(183, 48, 41);
   padding: 10px 30px;
   text-transform: uppercase;
   text-decoration: none;
   font-weight: 500;
   margin-top: 10px;
-  color: #111;
+  color: whitesmoke;
   letter-spacing: 2px;
   transition: 0.2s;
 }
